# Map_recognition_by_OpenCV

./: CMakeLists.txt
include/: hello.hpp  identifier.hpp
src/: identifier.cpp  main.cpp
